--- a/static/index.html
+++ b/static/index.html
@@ -1,8 +1,6 @@
-<html>
-<body>
-<br/> <br/> <br/> <br/> <br/>
-<p style="text-align: Center;"> <img src="metamask.png" /></p>
-<br/>
-<p style="text-align: Center;"> <i><font color="#CDCDCD" size="3">from MetaMask</i> </font></p>
-</body>
-</html>
+
+
+<div id="logo-container"></div>
+<span><i>from metamask</i></span>
+<script src="bundle.js"></script>
+  
